--- a/style.css
+++ b/style.css
@@ -12,14 +12,16 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(45deg,#0a0a0a,#3a4452);
+    /* background: linear-gradient(45deg,#0a0a0a,#3a4452); */
 }
 .container {
-    border: 1px solid #717377;
-    padding: 20px;
+    border: 1px solid #3b74e7;
+    padding: 10px;
     border-radius: 16px;
     background:transparent;
-    /* box-shadow: 0px 3px 15px rgba(113, 115, 119, 0.5); */
+    box-shadow: rgba(144, 168, 247, 0.4) -5px 5px;
+}
+.container:hover{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 input {
@@ -28,17 +30,15 @@ input {
     padding: 24px;
     margin: 10px;
     background: transparent;
-    /* box-shadow: 0px 3px 15px rgba(84, 84, 84, 0.1); */
     font-size: 40px;
     text-align: right;
     cursor: pointer;
-    color: #ffffff;
     outline: none;
     border-radius: 10px;
     box-shadow: rgba(-50, -50, -93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 input::placeholder {  /* pseudo class selector*/
-    color: #ffffff;
+    color: black;
 }
 button {
     border: none;
@@ -47,16 +47,23 @@ button {
     margin: 10px;
     border-radius: 50%;
     background: transparent;
-    color: #ffffff;
     font-size: 20px;
     cursor: pointer;
-    /* box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1); */
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-    
+}
+button:hover{
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    font-weight: 700;
+    scale: 1.1;
+    color: white;
+    border: 1px solid #fb7c14;
 }
 .equalBtn {
     background-color: #fb7c14;
+    color: white;
+    font-weight: 600;
 }
 .operator {
-    color: #6dee0a;
+    color: #fb7c14;
+    font-weight: 600;
 } 
